force-app/main/default/objects/Factsheet_Item__c/Factsheet_Item__c.object-meta.xml
<CustomObject>
    <label>Factsheet Item</label>
    <nameField>
        <displayFormat>FSI-{00000}</displayFormat>
        <label>Factsheet Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Factsheet Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>