force-app/main/default/objects/Factsheet_Item__c/fields/Custom_Filter__c.field-meta.xml
<CustomField>
    <fullName>Custom_Filter__c</fullName>
    <label>Custom Filter</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>