force-app/main/default/objects/Factsheet_Item__c/fields/Custom_Title__c.field-meta.xml
<CustomField>
    <fullName>Custom_Title__c</fullName>
    <description>The name of the custom label to use as the title of the factsheet item</description>
    <inlineHelpText>The name of the custom label to use as the title of the factsheet item</inlineHelpText>
    <label>Custom Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>