force-app/main/default/objects/Factsheet_Item__c/fields/Factsheet__c.field-meta.xml
<CustomField>
    <fullName>Factsheet__c</fullName>
    <label>Factsheet</label>
    <referenceTo>Factsheet__c</referenceTo>
    <relationshipLabel>Factsheet Items</relationshipLabel>
    <relationshipName>Factsheet_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>