force-app/main/default/objects/Factsheet_Item__c/fields/Fieldset_Name__c.field-meta.xml
<CustomField>
    <fullName>Fieldset_Name__c</fullName>
    <label>Fieldset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>