force-app/main/default/objects/Factsheet_Item__c/fields/Is_Related_to_Parent__c.field-meta.xml
<CustomField>
    <fullName>Is_Related_to_Parent__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Related to Parent</label>
    <type>Checkbox</type>
</CustomField>