force-app/main/default/objects/Factsheet_Item__c/fields/Parent_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field_Name__c</fullName>
    <label>Parent Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>