force-app/main/default/objects/Factsheet_Item__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>